--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,7 @@ html {
 
 }
 
-background-image: {
-  rgba(73, 85, 98), linear-gradient
-}
-
-.wrapper {
+.masthead {
 
   background-color: #495562;
 
@@ -20,4 +16,24 @@ background-image: {
 
 .btn {
 
+}
+
+.banner {
+  max-height: 500px;
+  overflow: hidden;
+}
+
+@media  only screen and (min-width: 38em) {
+  .banner-btn {
+    text-align: right;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  .banner-content {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-image: linear-gradient(to top, rgba(73, 85, 98, .9), rgba(73, 85, 98, 0));
+  }
 }
