--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,19 @@
 html {
-  font-family: "Georgia, serif";
+  font-family: Georgia, serif;
   color: #fff;
-
 }
 
 .masthead {
-
   background-color: #495562;
-
 }
 
 .btn-ghost:hover {
-
+  color: #efefef;
+  background-color: #97a49b;
 }
 
 .btn {
-
+  color: #fff;
 }
 
 .banner {
@@ -23,17 +21,21 @@ html {
   overflow: hidden;
 }
 
-@media  only screen and (min-width: 38em) {
+@media only screen and (min-width: 38em) {
+
   .banner-btn {
     text-align: right;
   }
+
 }
 
 @media only screen and (min-width: 60em) {
+
   .banner-content {
     position: absolute;
     bottom: 0;
     width: 100%;
     background-image: linear-gradient(to top, rgba(73, 85, 98, .9), rgba(73, 85, 98, 0));
   }
+
 }
